# terminal-pc-matrix

./: Cargo.toml  my_pc_specs.txt  next-steps.html?statcb=0&installdataindex=empty&defaultbrowser=0#
src/: antivirus_ops.rs  audio_text_ops.rs  browser_ops.rs  calculator_ops.rs  cli.rs  dns_ops.rs  file_download_ops.rs  file_ops.rs  http_ops.rs  image_download_ops.rs  interactive.rs  ip_info_ops.rs  lib.rs  main.rs  network_ops.rs  pc_specs_ops.rs  system_ops.rs  ui.rs  unit_converter_ops.rs  utils.rs  video_download_ops.rs  whois_ops.rs
